# lbr-payload_pps

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  format.sh  format_check.sh  make.ps1  make.sh  syscalls.c
.github/workflows/: ci-actions.yml
app/: CMakeLists.txt
app/pps/: CMakeLists.txt  board.h  main.cc  pps.cc  pps.h
app/pps/helpers/: CMakeLists.txt  pps_helpers.cc  pps_helpers.h
app/pps/motor_support/: CMakeLists.txt  dc_motor.cc  dc_motor.h
app/pps/pps_bsp/: CMakeLists.txt  l476_board.cc
cmake/: build-util.cmake  gcc-m4f.cmake
common/: CMakeLists.txt
common/core/: CMakeLists.txt
common/core/math/: imu_math.h
common/core/periph/: CMakeLists.txt
common/core/periph/drv8245/: CMakeLists.txt  drv8245.cc  drv8245.h
common/core/utils/: CMakeLists.txt  reg_helpers.cc  reg_helpers.h
common/drivers/: CMakeLists.txt
common/drivers/bus/: i2c.h
common/drivers/io/: encoder.h  gpio.h  pwm.h
common/drivers/platform/bno055/: CMakeLists.txt  bno055_imu.cc  bno055_imu.h
common/drivers/platform/stm32l4/: CMakeLists.txt  reg_helpers.h  st_encoder.cc  st_encoder.h  st_gpio.cc  st_gpio.h  st_i2c.cc  st_i2c.h  st_pwm.cc  st_pwm.h  st_sys_clock.cc  st_sys_clock.h
common/drivers/time/: sys_clock.h
common/drivers/utils/: CMakeLists.txt  delay.cc  delay.h
mcu_support/: CMakeLists.txt
mcu_support/CMSIS/: CMakeLists.txt
mcu_support/CMSIS/include/: cmsis_armcc.h  cmsis_armclang.h  cmsis_armclang_ltm.h  cmsis_compiler.h  cmsis_gcc.h  cmsis_iccarm.h  cmsis_version.h  core_armv81mml.h  core_armv8mbl.h  core_armv8mml.h  core_cm0.h  core_cm0plus.h  core_cm1.h  core_cm23.h  core_cm3.h  core_cm33.h  core_cm35p.h  core_cm4.h  core_cm7.h  core_sc000.h  core_sc300.h  mpu_armv7.h  mpu_armv8.h
mcu_support/stm32/: stlink.cfg
mcu_support/stm32/f4xx/: CMakeLists.txt  stm32f401xe.h  stm32f4xx.h  system_stm32f4xx.h
mcu_support/stm32/f4xx/HAL/: CMakeLists.txt  stm32f4xx_hal.h  stm32f4xx_hal_conf.h  stm32f4xx_hal_cortex.h  stm32f4xx_hal_def.h  stm32f4xx_hal_dma.h  stm32f4xx_hal_dma_ex.h  stm32f4xx_hal_exti.h  stm32f4xx_hal_flash.h  stm32f4xx_hal_flash_ex.h  stm32f4xx_hal_flash_ramfunc.h  stm32f4xx_hal_gpio.h  stm32f4xx_hal_gpio_ex.h  stm32f4xx_hal_pwr.h  stm32f4xx_hal_pwr_ex.h  stm32f4xx_hal_rcc.h  stm32f4xx_hal_rcc_ex.h
mcu_support/stm32/f4xx/HAL/Legacy/: stm32_hal_legacy.h
mcu_support/stm32/f4xx/f401/: STM32F401RETX_FLASH.ld
mcu_support/stm32/f4xx/f411/: STM32F411CCUx_FLASH.ld
mcu_support/stm32/l4xx/: CMakeLists.txt  stm32l476xx.h  stm32l4xx.h  system_stm32l4xx.h
mcu_support/stm32/l4xx/HAL/: CMakeLists.txt  stm32l4xx_hal.c  stm32l4xx_hal.h  stm32l4xx_hal_conf.h  stm32l4xx_hal_cortex.c  stm32l4xx_hal_cortex.h  stm32l4xx_hal_def.h  stm32l4xx_hal_dma.c  stm32l4xx_hal_dma.h  stm32l4xx_hal_dma_ex.c  stm32l4xx_hal_dma_ex.h  stm32l4xx_hal_flash.c  stm32l4xx_hal_flash.h  stm32l4xx_hal_flash_ex.c  stm32l4xx_hal_flash_ex.h  stm32l4xx_hal_flash_ramfunc.c  stm32l4xx_hal_flash_ramfunc.h  stm32l4xx_hal_gpio.c  stm32l4xx_hal_gpio.h  stm32l4xx_hal_gpio_ex.h  stm32l4xx_hal_i2c.c  stm32l4xx_hal_i2c.h  stm32l4xx_hal_i2c_ex.c  stm32l4xx_hal_i2c_ex.h  stm32l4xx_hal_pwr.c  stm32l4xx_hal_pwr.h  stm32l4xx_hal_pwr_ex.c  stm32l4xx_hal_pwr_ex.h  stm32l4xx_hal_rcc.c  stm32l4xx_hal_rcc.h  stm32l4xx_hal_rcc_ex.c  stm32l4xx_hal_rcc_ex.h  stm32l4xx_hal_tim.c  stm32l4xx_hal_tim.h  stm32l4xx_hal_tim_ex.c  stm32l4xx_hal_tim_ex.h
mcu_support/stm32/l4xx/HAL/Legacy/: stm32_hal_legacy.h
